update: display scrollbar all the time to avoid menu horizontal oscillation on AZC page

--- a/src/wp-content/themes/azc/resources/assets/styles/scss/_global.scss
+++ b/src/wp-content/themes/azc/resources/assets/styles/scss/_global.scss
@@ -10,6 +10,7 @@ font-style: normal;
 }
 html {    
     scroll-behavior: smooth;
+    height:101%;
 }
 * {
   outline: none;
@@ -17,6 +18,7 @@ html {
 body {
     font-family: arial, sans serif;
     width: 100vw;
+    height:101%;
 }
 
 address {
